# geospatial-agentic-services

./: CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
docs/: adding_an_agent_service.md  development_and_deployment_environment.md  examples.md  gas_client_sdk.md  gas_interfaces.md  gas_registry.md  gas_server_architecture.md  included_agents.md  index.md
docs/assets/stylesheets/: extra.css
docs/overrides/partials/: header.html
examples_for_using_gas_services/: Geographically Weighted Regression.ipynb  county_obesity_hotspot_analysis_workflow.ipynb  county_obesity_hotspot_analysis_workflow2.ipynb  geographically_weighted_regression_analysis.ipynb  geospatial_data_retrieval_agent.ipynb  geospatial_workflow_planning_agent_app.html  geospatial_workflow_planning_agent_demo.ipynb  obesity_prevalence_in_WV.ipynb  pa_hospital_accessibility_multi_download_workflow.ipynb  usgs_earthquake_agent_streaming_demo.ipynb  usgs_earthquake_events_exploration.ipynb
gas_registry/: __init__.py  app.py  gas_registry.db  gas_registry.py  index.html
gas_server/agents/: geospatial_data_retrieval_agent.py  geospatial_workflow_planning_agent.py  spatial_analysis_agent.py  usgs_earthquake_agent.py
gas_server/capabilities/: capabilities.json  exploratory_spatial_data_analysis_agent.json  geospatial_data_inspection_agent.json  geospatial_data_retrieval_agent.json  geospatial_workflow_planning_agent.json  spatial_analysis_agent.json  spatial_statistics_agent.json  usgs_earthquake_agent.json  web_mapping_app_agent.json
gas_server/core/: agent_registration.py  service_core.py
gas_server/schemas/: task_response.schema.json
gas_server/services/: geospatial_workflow_planning_agent_service.py  spatial_analysis_agent_service.py  usgs_earthquake_agent_service.py
tests/: test_agent_specs.py  test_gas_client.py  test_gas_registry_api.py  test_geospatial_workflow_planning_agent.py  test_service_contracts.py  test_service_registry.py  test_usgs_earthquake_agent.py
